# ghost-resend-mailer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: build.Dockerfile  master.yml  pr.yml  release.yml
src/: config.rs  email.rs  ghost.rs  main.rs  webhook.rs
